<resources>

    <string name="app_name">Foo movie Rental</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Foo movie catalog</string>
    <string name="category_crime">Crime</string>
    <string name="category_fiction">Fiction</string>
    <string name="category_documentary">Documentary</string>
    <string name="category_serial">Serial</string>
    <string name="menu_search">Search movies</string>
    <string name="menu_book">Book a movie</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_about">About us</string>
    <string name="menu_about_contact">Contact us</string>
    <string name="menu_about_team">Our team</string>
    <string name="menu_about_growth">Growth</string>
    <string name="menu_quit">Quit</string>
    <string name="choose_category_label">Choose a category</string>
    <string name="title_activity_list_category">ListCategoryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>

</resources>