<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_search" android:title="@string/menu_search" android:icon="@drawable/search"></item>
    <item android:id="@+id/menu_book" android:title="@string/menu_book" android:icon="@drawable/reserver"></item>
    <item android:id="@+id/menu_shops" android:title="@string/menu_shops" android:icon="@drawable/magasins"></item>
    <item android:id="@+id/menu_about" android:title="@string/menu_about" android:icon="@drawable/presentation">
        <menu>
            <item android:id="@+id/menu_about_contact" android:title="@string/menu_about_contact"></item>
            <item android:id="@+id/menu_about_team" android:title="@string/menu_about_team"></item>
            <item android:id="@+id/menu_about_growth" android:title="@string/menu_about_growth"></item>
        </menu>
    </item>
    <item android:id="@+id/menu_quit" android:title="@string/menu_quit"/>
</menu>