<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout style="@style/categoriesSpacer" />
    
    <LinearLayout style="@style/categoriesContainer" >
        
        <LinearLayout style="@style/categorySpacer" />
        
        <TextView
            android:id="@+id/chooseCategoryLabel"
            style="@style/centered.vertical"
            android:layout_weight="1"
            android:text="@string/choose_category_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic" 
            android:textColor="#fff"
            android:gravity="center"/>
        
        <LinearLayout style="@style/categorySpacer" />
        <Button
            android:id="@+id/button_category_crime"
            style="@style/categoryButton"
            android:text="@string/category_crime" />
        
        <LinearLayout style="@style/categorySpacer" />
        <Button
            android:id="@+id/button_category_fiction"
            style="@style/categoryButton"
            android:text="@string/category_fiction" />
        
        <LinearLayout style="@style/categorySpacer" />
        <Button
            android:id="@+id/button_category_documentary"
            style="@style/categoryButton"
            android:text="@string/category_documentary" />
        
        <LinearLayout style="@style/categorySpacer" />
        <Button
            android:id="@+id/button_category_serial"
            style="@style/categoryButton"
            android:text="@string/category_serial" />
        
        <LinearLayout style="@style/categorySpacer" />
            
    </LinearLayout>    
    
    <LinearLayout style="@style/categoriesSpacer"/>
    

</LinearLayout>
